--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
     crossorigin="anonymous"
   />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
