--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Customers Lineup</title>
   </head>
   <body>
  
